# jian24-APP

./: .gitignore  .travis.yml  README.md  debugtalk.py  login.yml  pyproject.toml  search.har  search.yml  test_travis.py
api/: SearchProduct.yml  category-list.yml  create_promotion.yml  demo_api.yml  disable_promotion.yml  franchisee.yml  get-login-user.yml  login.yml  order.yml  search_promotion.yml  store-list.yml  store-product.yml  store_product_import.yml  user-franchisee.yml
data/: cookies
testcases/: account-info.yml  create_singleProductPromotion_testcase.yml  login.yml  login_failed_testcase.yml  login_successful_testcase.yml  login_testcase.yml  search-store-product.yml  searchOrder_ByCombinationCondition_testcase.yml  searchOrder_ByOrderStatusCode_testcase.yml  searchOrder_testcase.yml  searchProduct_AllStoreCode_testcase.yml  searchProduct_ByBarcode_testcase.yml  searchProduct_ByCategoryCode_testcase.yml  searchProduct_ByCombinationCondition_testcase.yml  searchProduct_ByProductName_testcase.yml  searchProduct_BySKU_testcase.yml  searchProduct_ByStoreCode_testcase.yml  searchProduct_ByshelfNumberORgoodsNumber_testcase.yml
testsuites/: login_testsuit.yml  ordersManagement_testsuit.yml  productManagement_testsuit.yml
